[gd_scene load_steps=7 format=3 uid="uid://nc3w7aqw3oct"]

[ext_resource type="Texture2D" uid="uid://jqwdccje5fua" path="res://resources/atlas_textures/helmet_icon.tres" id="1_tkvf2"]
[ext_resource type="Script" uid="uid://ciby4g0oiddfa" path="res://scenes/ui/equipment_slot_preview/equipment_slot_preview.gd" id="1_wrcpw"]
[ext_resource type="Shader" uid="uid://2iyv7xdg88rp" path="res://resources/shaders/global_colors.gdshader" id="2_aka7f"]
[ext_resource type="Texture2D" uid="uid://fhh30cggnmmj" path="res://assets/textures/ui/main_slot.png" id="4_42xhx"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6x3rx"]
resource_local_to_scene = true
shader = ExtResource("2_aka7f")
shader_parameter/type = 4
shader_parameter/modulate = Color(1, 1, 1, 1)
shader_parameter/strength = 1.0
shader_parameter/alpha = 1.0
shader_parameter/texture_offset = Vector2(0, 0)
shader_parameter/scale_mode = 0
shader_parameter/scale = 1.0
shader_parameter/saturation = 1.0
shader_parameter/brightness = 0.0
shader_parameter/use_screen_texture = false
shader_parameter/fill = false
shader_parameter/label_mode = false
shader_parameter/outline_type = 0
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/outline_pattern = 0
shader_parameter/add_margins = false
shader_parameter/width = 0.0
shader_parameter/flip_colors = false
shader_parameter/inside = false
shader_parameter/enable_dither = false
shader_parameter/dither_colors = PackedInt32Array(0, 0, 0)
shader_parameter/angle = 0.0
shader_parameter/enable_gradient = false
shader_parameter/gradient_blend_mode = 0
shader_parameter/gradient_speed = 1.0
shader_parameter/gradient_size = 1.0
shader_parameter/gradient_animated = false
shader_parameter/gradient_time = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lwlfr"]
shader = ExtResource("2_aka7f")
shader_parameter/type = 0
shader_parameter/modulate = Color(1, 1, 1, 1)
shader_parameter/strength = 1.0
shader_parameter/alpha = 1.0
shader_parameter/texture_offset = Vector2(0, 0)
shader_parameter/scale_mode = 0
shader_parameter/scale = 1.0
shader_parameter/saturation = 1.0
shader_parameter/brightness = 0.0
shader_parameter/use_screen_texture = false
shader_parameter/fill = false
shader_parameter/label_mode = false
shader_parameter/outline_type = 0
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/outline_pattern = 0
shader_parameter/add_margins = false
shader_parameter/width = 0.0
shader_parameter/flip_colors = false
shader_parameter/inside = false
shader_parameter/enable_dither = false
shader_parameter/dither_colors = PackedInt32Array(0, 0, 0)
shader_parameter/angle = 0.0
shader_parameter/enable_gradient = false
shader_parameter/gradient_blend_mode = 0
shader_parameter/gradient_speed = 1.0
shader_parameter/gradient_size = 1.0
shader_parameter/gradient_animated = false
shader_parameter/gradient_time = 0.0

[node name="EquipmentSlotPreview" type="MarginContainer"]
custom_minimum_size = Vector2(32, 32)
offset_right = 32.0
offset_bottom = 32.0
script = ExtResource("1_wrcpw")

[node name="BackgroundColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_6x3rx")
layout_mode = 2

[node name="SlotTextureRect" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_lwlfr")
layout_mode = 2
texture = ExtResource("1_tkvf2")

[node name="MainSlotTextureRect" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("4_42xhx")
